# LinuxApplicationDevelopment2022

01_GitBuildReq/: hello.c
02_TerminalProject/: Makefile  Show.c  Show2.c~
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: Makefile  answer1.gdb  answer2.gdb  range.c  scrt1.gdb  scrt2.gdb
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  move.c  protect.c  tests.sh
08_Environmental/: Makefile.am  configure.ac  rash.sh  rhasher
09_I18n/: Makefile.am  configure.ac  main.c
09_I18n/po/: guess.po  guess.pot
